<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IBDHelper</string>
    <string name="action_settings">Settings</string>
    <string name="title_section2">My Day</string>
    <string name="title_section1">My Medicine</string>
    <string name="title_section3">My Foods</string>
    <string name="title_section4">My Appointments</string>
    <string name="title_section5">My Symtoms</string>
    <string name="title_section6">Support</string>
    <string name="RegistrationForm">Registration Form</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="SignUp">SignUp</string>
    <string name="login">Login</string>
    <string name="Username">Username</string>
    <string name="noAcc">I don\'t have account. Register Me!</string>
    <string name="skipReg">Skip. Login in later!</string>
    <string name="weight">Weight</string>
    <string name="pounds">lbs</string>
    <string name="Height">Height</string>
    <string name="VerifyPass">Retype Password</string>
    <string name="menu_support">Support</string>
    <string name="MedCheckbox">With Food?</string>
    <string name="Add_Med_Name">Medicine Name</string>
    <string name="Add_Med_Description">Description</string>
    <string name="Add_Med_AlarmText">"Alarms"</string>
    <string name="Submit">Submit</string>
    <string name="Alarm_hint">00:00</string>
    <string name="Appointment_Date">Date</string>
    <string name="Add_App_Name">Appointment Name</string>
    <string name="add_app_loc">Location</string>
    <string name="add_flare_pain">Pain Level</string>
	<string-array name="add_list">
        <item>Add Food/Water</item>
        <item>Add Flareups</item>
        <item>Add BM</item>
        <item>Add Appointment</item>
        <item>Add Medicine </item>
    </string-array>
        <string name="links">Links</string>
        <string name="Groups">Groups</string>
        <string name="News">News</string>
        <string name="UserInformation">User Information</string>
        <string name="LinkAccounts">Links Accounts</string>
        <string name="SendFeedback">Send Feedback</string>
        <string name="About">About</string>
        <string name="Please">Please add Information</string>
        <string name="app_id ">379523005483259</string>
        <string name="cancel">Cancel</string>
        <string name="flareText">Flare-up</string>
        <string name="bmText">BM</string>
        <string name="today">Today</string>
        <string name="flareups">Flare-Ups</string>
        <string name="numberOfFlares">Number of Flares</string>
        <string name="painLevel">Pain Level</string>
        <string name="zero">0</string>
        <string name="newWater">Water Amount</string>
        <string name="cups">Cups Today</string>
        <string name="numCups">Number of Cups</string>
        <string name="BMs">BM\'s</string>
        <string name="numOfBm">Number of BM\'s</string>
        <string name="future">Future</string>
        <string name="past">Past</string>
        <string name="howMuchWater">How much water?</string>
        <string name="oz">oz</string>
        <string name="Sorry">Page can not be loaded there is no internet connection</string>
        <string name="Symptoms">Symptoms</string>
        <string name="Appointments">Appointments</string>
        <string name="Water">Water</string>
        <string name="mumOf">Number of appoinments today.</string>
        <string name="cup">Cups</string>
        <string name="del">Delete</string>
        <string name="goBack">Close</string>
        <string name="userInfo">User Information</string>
        <string name="username">Username</string>
        <string name="name">Name</string>
        <string name="back">Back</string>
        <string name="blank">" "</string>
</resources>
