<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/Button03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UserInformation" />

    <Button
        android:id="@+id/buttonLinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LinkAccounts" />

    <Button
        android:id="@+id/buttonGroups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SendFeedback" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/About" />

</LinearLayout>
